updates to language/project specifics